chore: remove hashed asset_id, instead set policy and asset name directly
